--- a/docs/style.css
+++ b/docs/style.css
@@ -1,9 +1,14 @@
-html {
-	background-color: #ececec;
-	color: #212121;
+[data-theme="light"] {
+	--bg-color: #ececec;
+	--text-color: #212121;
 }
 
-html.dark {
-	background-color: #212121;
-	color: #ececec;
+[data-theme="dark"] {
+	--bg-color: #212121;
+	--text-color: #ececec;
+}
+
+html {
+	background-color: var(--bg-color);
+	color: var(--text-color);
 }
