--- a/docs/style.css
+++ b/docs/style.css
@@ -1,14 +1,9 @@
-[data-theme="light"] {
-	--bg-color: #ececec;
-	--text-color: #212121;
+body{
+  background-color:#f0f0f0;
+  color: #222;
 }
-
-[data-theme="dark"] {
-	--bg-color: #212121;
-	--text-color: #ececec;
-}
-
-html {
-	background-color: var(--bg-color);
-	color: var(--text-color);
+ 
+.dark{
+  background-color:black;
+  color: white;
 }
